# kyrex-chain

./: .gitignore  MINING.md  README.md  kyrex.json  prepare.py  program.md  pyproject.toml  train.py
.github/workflows/: validate.yml
history/: blocks.jsonl
kyrex/: __init__.py  agent.py  chain.py  cli.py  config.py  display.py  mine.py
